# sun-riseup-viewrrr

./: .eslintrc  .gitignore  AGENTS.md  README.md  biome.json  components.json  devbox.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.dev.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  useFolderNavigator-test-plan.md  vite.config.ts  vitest.workspace.ts
.githook/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.storybook/: main.ts  preview.ts  vitest.setup.ts
data/: mockData.ts
docs/: archive-support-decision-list.md  cd-setup.md  frontend-architecture-analysis.md  library-separation-analysis.md  menu-action-architecture.md  planning-with-github.md  state-management-analysis.md  test-mock-refactor-todo.md  testing-strategy-2026-05.md  testing-strategy.md  thumbnail-system-design-issues.md  vitest4-mock-type-migration.md
memo/: 2025-06-10.md  2025-06-12.md  2025-07-03.md  new_memo.ps1  template.md
scripts/: create_test_data_phase4.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/core_logic/: Cargo.toml
src-tauri/core_logic/docs/: refactor_image_container.md  todo.md
src-tauri/core_logic/src/: error.rs  fs.rs  image_container.rs  lib.rs  test_helper.rs  thumbnail.rs  utils.rs
src-tauri/core_logic/src/image_container/: archive.rs  folder.rs  reader_config.rs
src-tauri/core_logic/src/thumbnail/: batch.rs  config.rs  error.rs  folder.rs  generator.rs  mod.rs
utils/: keyboardUtils.ts
(+288 files in other folders)
