[package]
name = "core_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
rayon = "1.11"
blake3 = "1.8"
thiserror = "2.0"
num_cpus = "1.16"
zip = "8.6.0"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
